syntax = "proto3";

option csharp_namespace = "AuthenticationGrpc";

package auth;

// The greeting service definition.
service Auth {
  // Sends a greeting
  rpc SignUp (SignupRequest) returns (SignupReply);
  rpc Login (LoginRequest) returns (LoginReply);
}

// The request message containing the user's name.
message SignupRequest{
  string username = 1;
  string password = 2;
}

// The response message containing the greetings.
message SignupReply {
  string message = 1;
}

// The request message containing the user's name.
message LoginRequest{
  string username = 1;
  string password = 2;
}

// The response message containing the greetings.
message LoginReply{
  string message = 1;
}
